<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.HomeFragment">

    <Spinner
        android:id="@+id/sp_versions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/surface"
        android:elevation="1dp"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_favorites"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/home_favorites_item"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_home"
        app:layout_constraintTop_toBottomOf="@+id/cv_moves">

        <ImageView
            android:id="@+id/iv_card_favorites"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:rotation="20"
            android:src="@drawable/ic_favorite"
            android:translationX="30dp" />

        <TextView
            android:id="@+id/tv_card_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/favorites"
            android:textColor="@color/home_item_text"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_moves"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/home_moves_item"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_home"
        app:layout_constraintTop_toBottomOf="@+id/cv_pokedex">

        <ImageView
            android:id="@+id/iv_card_moves"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:rotation="20"
            android:src="@drawable/ic_move"
            android:translationX="30dp" />

        <TextView
            android:id="@+id/tv_card_moves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/moves"
            android:textColor="@color/home_item_text"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_items"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/home_items_item"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_pokedex">

        <ImageView
            android:id="@+id/iv_card_items"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:rotation="20"
            android:src="@drawable/ic_items"
            android:translationX="30dp" />

        <TextView
            android:id="@+id/tv_card_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/items"
            android:textColor="@color/home_item_text"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pokedex"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/home_pokedex_item"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_versions">

        <ImageView
            android:id="@+id/iv_card_pokedex"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:rotation="20"
            android:src="@drawable/ic_pokedex"
            android:translationX="30dp" />

        <TextView
            android:id="@+id/tv_card_pokedex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/pokedex"
            android:textColor="@color/home_item_text"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_home_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/home_title"
        android:textAlignment="viewStart"
        android:textColor="@color/on_background"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_types"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/home_types_item"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_items">

        <ImageView
            android:id="@+id/iv_card_types"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_type"
            android:translationX="30dp" />

        <TextView
            android:id="@+id/tv_card_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/types"
            android:textColor="@color/home_item_text"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>